Fixed Subscription-card alignment

--- a/src/app/modules/products/subscription-card/subscription-card.component.scss
+++ b/src/app/modules/products/subscription-card/subscription-card.component.scss
@@ -1,21 +1,22 @@
 mat-card {
-    max-width: 400px;
     text-align: center;
     transition: all 0.3s ease-in-out;
 }
 
 mat-card-title {
     font-size: 2rem;
+    margin: 0.5rem;
 }
 
 mat-icon {
-    padding-right: 1rem;
+    padding-right: 0.5rem;
 }
 
 mat-card-subtitle {
     font-size: xx-large;
     color: rgb(0, 0, 0);
     font-weight: bold;
+    margin-top: 0.5rem;
 }
 
 .price-month {
@@ -26,15 +27,27 @@ mat-card:hover {
     cursor: pointer;
     box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.3);
     transform: scale(1.04);
+
     mat-card-title {
         color: red;
     }
+
     button {
         color: red;
     }
 }
 
 button {
-    padding: 10px 90px;
+    width: 100%;
     font-size: 1.2rem;
+}
+
+.icon-text {
+    display: flex;
+    justify-content: center;
+}
+
+.user-count {
+    display: flex;
+    margin-top: 0.5rem;
 }
